
[package]
name = "ltrender"
version = "0.1.6"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "a diff based terminal rendering engine"
repository = "https://github.com/simoncreates/ltrender.git"

[dependencies]
crossterm     = "0.29.0"
ascii_assets  = "0.2.0"
common-stdx   = "0.1.1"
log           = "0.4.27"
env_logger    = "0.11.8"
thiserror     = "1.0"
rand          = "0.8"
dyn-clone     = "1"
once_cell     = "1.21.3"
tick_manager_rs = "0.1.0"
crossbeam-channel = "0.5.15"
ctrlc = "3.5.0"

[features]
default = ["screen_select_subscription"]

screen_select_subscription = []